--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>carlo kicks a carly corner kicks</h2>
     <h3>father found four flying fly in the flour</h3>
     <h4>six after six makes sixtysix</h4>
+    <img src="tree.jpg" alt="">
 </body>
 </html>
