--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>hi i am x</h2>
         <h3>ajke aar class a jamu na</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quia dolor soluta, incidunt aut sunt eveniet maxime totam corrupti officia.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero itaque soluta, odio tempora quibusdam alias minima doloribus. Accusamus repellendus iusto voluptatum alias ad, iste excepturi tempore quas, eum vel nemo?</p>
     </div>
     <h1>fuzzy yazzy was a bear fuzzy yazzy head no hear</h1>
     <h2>carlo kicks a carly corner kicks</h2>
